config/components/kueueviz/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kueueviz-backend
  namespace: system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kueueviz-backend
  template:
    metadata:
      labels:
        app: kueueviz-backend
    spec:
      serviceAccountName: kueueviz-backend
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: backend
          image: backend:lastest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
