config/components/kueueviz/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kueueviz-frontend
  namespace: system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kueueviz-frontend
  template:
    metadata:
      labels:
        app: kueueviz-frontend
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: env-config
          configMap:
            name: kueueviz-frontend-env
      containers:
        - name: frontend
          image: frontend:lastest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: env-config
              mountPath: /app/build/env.js
              subPath: env.js
              readOnly: true
