config/components/kueueviz/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kueueviz-ingress
  namespace: system
spec:
  rules:
    - host: kueueviz.local
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: kueueviz-backend
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kueueviz-backend
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: kueueviz-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kueueviz-frontend
                port:
                  number: 8080
